--- a/readme
+++ b/readme
@@ -1,4 +1,11 @@
-Freqtrade is a free and open source crypto trading bot written in Python. It is designed to support all major exchanges and be controlled via Telegram or webUI. It contains backtesting, plotting and money management tools as well as strategy optimization by machine learning.
+[![License: MIT](https://img.shields.io/badge/license-MIT-blue.svg)](https://opensource.org/licenses/MIT)
+
+# Free Fretrade Strategys build by my Community - Alex Crypto King
+
+## Overview
 
 Here you will find some good working Strategy of our Comunity
 Alex Crypto King
+
+## Contributing
+JOIN MY DISCORD - https://discord.gg/vfJQ5pftwX
